--- a/App.config
+++ b/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+<appSettings>
+	<add key="OPER_NO" value="SmartEnergy"/>
+	<add key="CURRENCY" value="SGD"/>
+	<add key="IP" value="192.168.137.131"/>
+	<add key="CARDNO" value="4761340000000035"/>
+</appSettings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -10,6 +16,7 @@
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+		
     </providers>
   </entityFramework>
 </configuration>
